fix file-list: fix long file-names overflowing file icon

--- a/src/less/components/entries.less
+++ b/src/less/components/entries.less
@@ -15,7 +15,11 @@
   p {
     flex: 1 1;
 
+    max-width: ~'calc(100% - 9rem)';
+
     text-overflow: ellipsis;
+
+    word-wrap: break-word;
   }
 
   > span {
